# bitdefender-xsoar

claude/iTOP/: Dockerfile  docker-compose.yml  requirements.txt
claude/iTOP/app/: config.py  main.py
claude/iTOP/app/clients/: itop.py  jira.py
claude/iTOP/app/export/: excel.py  external_excel.py  pdf.py
claude/iTOP/app/routers/: agrofert_import.py  external_reporting.py  jira_reporting.py  reporting.py  tickets.py
claude/iTOP/app/templates/: agrofert_import.html  base.html
claude/iTOP/app/templates/reporting/: external.html  internal.html  jira.html
claude/iTOP/app/templates/tickets/: detail.html  index.html
claude/iTOP/itop-extension/itop-agrofert/: cs.dict.itop-agrofert.php  datamodel.itop-agrofert.xml  en.dict.itop-agrofert.php  module.itop-agrofert.php
claude/mcp-itop/: .env.example  .gitignore  Dockerfile  claude_desktop_config.example.json  claude_desktop_config.json  docker-compose.yml  pyproject.toml  run-mcp.sh
claude/mcp-itop/src/mcp_itop/: itop_client.py  server.py
claude/mcp-itop/src/mcp_itop/tools/: contracts.py  customers.py  tickets.py  worklogs.py
claude/traefik/: docker-compose.yml  dynamic.yml
claude/xsoar-bitdefender/Packs/BitdefenderGravityZone/: .pack-ignore  README.md  pack_metadata.json
claude/xsoar-bitdefender/Packs/BitdefenderGravityZone/Classifiers/: classifier-BitdefenderGravityZone.json  classifier-mapper-incoming-BitdefenderGravityZone.json
claude/xsoar-bitdefender/Packs/BitdefenderGravityZone/IncidentFields/: incidentfield-BitdefenderAPHType.json  incidentfield-BitdefenderActionTaken.json  (+32 more)
(+37 files in other folders)
