[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-itop"
version = "0.1.0"
description = "MCP server for iTOP ITSM - work logging and reporting"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-itop = "mcp_itop.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_itop"]
